--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
     <div id="scroll-progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"></div>
 </div>
 <div class="page-layout">
-
     <header class="site-header" id="top-banner">
         <div class="header-inner">
-        <a class="brand" href="index.html">Anime Wiki</a>
-
+            <a class="brand" href="index.html">Anime Wiki</a>
             <div class="nav-wrap">
                 <nav class="main-nav" role="navigation" aria-label="Main navigation">
                     <a href="index.html" class="nav-link active">Home</a>
@@ -27,33 +25,25 @@
                     <a href="takopi.html" class="nav-link">Takopi's Original Sin</a>
                     <a href="lord-of-mysteries.html" class="nav-link">Lord of Mysteries</a>
                 </nav>
-
                 <div class="search-container" aria-hidden="false">
                     <label for="search-input" class="visually-hidden">Search site</label>
                     <input id="search-input" type="search" placeholder="Search anime, FAQs, gallery..." aria-label="Search" autocomplete="off" />
                     <ul id="suggestions" class="suggestions" role="listbox" aria-hidden="true"></ul>
                 </div>
-
-                <div id="date-time" class="date-time" aria-live="polite" aria-atomic="true" title="Current date and time">
-                </div>
-
+                <div id="date-time" class="date-time" aria-live="polite" aria-atomic="true" title="Current date and time"></div>
                 <button id="bg-btn" class="bg-btn" type="button" aria-pressed="false" title="BOOOOO!!!">
                     <span class="bg-icon" aria-hidden="true">⟲</span>
                     <span class="bg-label">Bg</span>
                 </button>
             </div>
-
         </div>
-
     </header>
-
     <main class="container">
         <section class="hero">
             <h1 class="hero-title">Discover, read, and explore anime</h1>
             <p class="hero-sub">A compact fan-driven wiki for selected series. Clean design, easy reading, and focused summaries.</p>
             <p class="piska"></p>
         </section>
-
         <section class="stats-section" aria-label="Site statistics">
             <div class="stats-grid">
                 <div class="stat">
@@ -70,7 +60,6 @@
                 </div>
             </div>
         </section>
-
         <section class="featured">
             <h2 class="section-title">Featured Anime</h2>
             <div class="grid">
@@ -82,7 +71,6 @@
                         <a class="read-more" href="attack-on-titan.html">Read more</a>
                     </div>
                 </article>
-
                 <article class="card">
                     <div class="card-media takopi"></div>
                     <div class="card-content">
@@ -91,7 +79,6 @@
                         <a class="read-more" href="takopi.html">Read more</a>
                     </div>
                 </article>
-
                 <article class="card">
                     <div class="card-media lord"></div>
                     <div class="card-content">
@@ -102,20 +89,16 @@
                 </article>
             </div>
         </section>
-
         <section class="about">
             <h2 class="section-title">About this wiki</h2>
-            <p style="text-decoration: underline;">This mini-wiki is designed as a simple, readable reference for selected series. Typography and color are tuned for long reading sessions. Navigation is intentionally minimal to keep focus on content.</p>
-
+            <p>This mini-wiki is designed as a simple, readable reference for selected series. Typography and color are tuned for long reading sessions. Navigation is intentionally minimal to keep focus on content.</p>
         </section>
         <section class="gallery-section">
             <h2 class="section-title">Gallery</h2>
             <div class="gallery-grid" role="list">
                 <figure class="gallery-item" role="listitem">
                     <img src="img/gallery1.jpg" alt="Gallery image 1 — description" loading="lazy">
-                    <figcaption class="overlay">
-                        <span class="caption-text">Caption 1</span>
-                    </figcaption>
+                    <figcaption class="overlay"><span class="caption-text">Caption 1</span></figcaption>
                 </figure>
                 <figure class="gallery-item" role="listitem">
                     <img src="img/gallery2.jpg" alt="Gallery image 2 — description" loading="lazy">
@@ -155,20 +138,15 @@
                 </figure>
             </div>
         </section>
-
         <h1>Frequently Asked Questions</h1>
-
         <div class="faq">
             <button class="faq-question">Will there be more anime available?</button>
             <div class="answer">Yes, we are constantly updating our library with new titles.</div>
-
             <button class="faq-question">Is there manga version of the wiki?</button>
             <div class="answer">No, but we are working to make one available in the future.</div>
-            
             <button class="faq-question">Is wiki free to use?</button>
             <div class="answer">Yes, the wiki is completely free to use, all content available without any subscriptions.</div>
         </div>
-                
         <button id="contact-toggle" class="form-button">Contact Us</button>
         <div id="form-window" class="form-window">
             <form class="form-container" aria-label="Contact form" id="contact-form">
@@ -186,13 +164,10 @@
                     <textarea id="message" name="message" rows="5" placeholder="Your message"></textarea>
                 </label>
                 <button type="submit" id="submitBtn">Send</button>
-                <p id="form-validation-message" class = "validation-message"></p>
+                <p id="form-validation-message" class="validation-message"></p>
             </form>
         </div>
-
-
     </main>
-
     <footer class="site-footer">
         <div class="container footer-inner">
             <div class="team-list">
