--- a/takopi.html
+++ b/takopi.html
@@ -11,17 +11,19 @@
 </head>
 <body>
 <div class="container page-layout">
-<header class="site-header">
-    <div class="container header-inner">
-        <a class="brand" href="index.html">Anime Wiki</a>
-        <nav class="main-nav">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="attack-on-titan.html" class="nav-link">Attack on Titan</a>
-            <a href="takopi.html" class="nav-link active">Takopi's Original Sin</a>
-            <a href="lord-of-mysteries.html" class="nav-link">Lord of Mysteries</a>
-        </nav>
-    </div>
-</header>
+    <header class="site-header" id="top-banner">
+        <div class="header-inner">
+            <a class="brand" href="index.html">Anime Wiki</a>
+            <div class="nav-wrap">
+                <nav class="main-nav" role="navigation" aria-label="Main navigation">
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="attack-on-titan.html" class="nav-link">Attack on Titan</a>
+                    <a href="takopi.html" class="nav-link active">Takopi's Original Sin</a>
+                    <a href="lord-of-mysteries.html" class="nav-link">Lord of Mysteries</a>
+                </nav>
+            </div>
+        </div>
+    </header>
 <main class="container">
     <article class="anime-page">
         <div>
