--- a/attack-on-titan.html
+++ b/attack-on-titan.html
@@ -8,18 +8,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 <div class="container page-layout">
-    <header class="site-header">
-        <div class="container header-inner">
+    <header class="site-header" id="top-banner">
+        <div class="header-inner">
             <a class="brand" href="index.html">Anime Wiki</a>
-            <nav class="main-nav">
-                <a href="index.html" class="nav-link">Home</a>
-                <a href="attack-on-titan.html" class="nav-link active">Attack on Titan</a>
-                <a href="takopi.html" class="nav-link">Takopi's Original Sin</a>
-                <a href="lord-of-mysteries.html" class="nav-link">Lord of Mysteries</a>
-            </nav>
+            <div class="nav-wrap">
+                <nav class="main-nav" role="navigation" aria-label="Main navigation">
+                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="attack-on-titan.html" class="nav-link active">Attack on Titan</a>
+                    <a href="takopi.html" class="nav-link">Takopi's Original Sin</a>
+                    <a href="lord-of-mysteries.html" class="nav-link">Lord of Mysteries</a>
+                </nav>
+            </div>
         </div>
     </header>
 
