--- a/index.html
+++ b/index.html
@@ -30,11 +30,6 @@
                     <input id="search-input" type="search" placeholder="Search anime, FAQs, gallery..." aria-label="Search" autocomplete="off" />
                     <ul id="suggestions" class="suggestions" role="listbox" aria-hidden="true"></ul>
                 </div>
-                <div id="date-time" class="date-time" aria-live="polite" aria-atomic="true" title="Current date and time"></div>
-                <button id="bg-btn" class="bg-btn" type="button" aria-pressed="false" title="BOOOOO!!!">
-                    <span class="bg-icon" aria-hidden="true">⟲</span>
-                    <span class="bg-label">Bg</span>
-                </button>
             </div>
         </div>
     </header>
@@ -183,6 +178,7 @@
         </div>
     </footer>
 </div>
+<script src="theme.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
