--- a/attack-on-titan.html
+++ b/attack-on-titan.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
-<div class="container page-layout">
+<div class="page-layout">
     <header class="site-header" id="top-banner">
         <div class="header-inner">
             <a class="brand" href="index.html">Anime Wiki</a>
@@ -22,6 +22,11 @@
                     <a href="takopi.html" class="nav-link">Takopi's Original Sin</a>
                     <a href="lord-of-mysteries.html" class="nav-link">Lord of Mysteries</a>
                 </nav>
+                <div class="search-container" aria-hidden="false">
+                    <label for="search-input" class="visually-hidden">Search site</label>
+                    <input id="search-input" type="search" placeholder="Search anime, FAQs, gallery..." aria-label="Search" autocomplete="off" />
+                    <ul id="suggestions" class="suggestions" role="listbox" aria-hidden="true"></ul>
+                </div>
             </div>
         </div>
     </header>
@@ -120,5 +125,7 @@
         </div>
     </footer>
 </div>
+<script src="search.js"></script>
+<script src="theme.js"></script>
 </body>
 </html>
