--- a/lord-of-mysteries.html
+++ b/lord-of-mysteries.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
-<div class="container page-layout">
+<div class="page-layout">
     <header class="site-header" id="top-banner">
         <div class="header-inner">
             <a class="brand" href="index.html">Anime Wiki</a>
@@ -22,6 +22,11 @@
                     <a href="takopi.html" class="nav-link">Takopi's Original Sin</a>
                     <a href="lord-of-mysteries.html" class="nav-link active">Lord of Mysteries</a>
                 </nav>
+                <div class="search-container" aria-hidden="false">
+                    <label for="search-input" class="visually-hidden">Search site</label>
+                    <input id="search-input" type="search" placeholder="Search anime, FAQs, gallery..." aria-label="Search" autocomplete="off" />
+                    <ul id="suggestions" class="suggestions" role="listbox" aria-hidden="true"></ul>
+                </div>
             </div>
         </div>
     </header>
@@ -101,6 +106,8 @@
     </div>
 </footer>
 </div>
+<script src="search.js"></script>
+<script src="theme.js"></script>
 <script src="lom.js"></script>
 <script src="main.js"></script>
 </body>
