Убрал поиск аниме

--- a/index.html
+++ b/index.html
@@ -171,17 +171,17 @@
     </main>
     <footer class="site-footer">
         <div class="container footer-inner">
-            <section id="api-search" aria-label="External anime search">
-                <h2 style="margin:0 0 8px; font-size:1rem;">Search (external)</h2>
-                <div class="search-row" style="display:flex; gap:8px; align-items:center;">
-                    <input id="api-search-input" placeholder="Search anime via Jikan..." aria-label="Search anime via Jikan">
-                    <button id="api-search-btn" class="form-button" type="button">Search Web</button>
-                </div>
-                <div id="api-results" class="grid" style="margin-top:12px;"></div>
-                <div style="text-align:center; margin-top:10px;">
-                    <button id="api-load-more" style="display:none" class="form-button" type="button">Load more</button>
-                </div>
-            </section>
+<!--            <section id="api-search" aria-label="External anime search">-->
+<!--                <h2 style="margin:0 0 8px; font-size:1rem;">Search (external)</h2>-->
+<!--                <div class="search-row" style="display:flex; gap:8px; align-items:center;">-->
+<!--                    <input id="api-search-input" placeholder="Search anime via Jikan..." aria-label="Search anime via Jikan">-->
+<!--                    <button id="api-search-btn" class="form-button" type="button">Search Web</button>-->
+<!--                </div>-->
+<!--                <div id="api-results" class="grid" style="margin-top:12px;"></div>-->
+<!--                <div style="text-align:center; margin-top:10px;">-->
+<!--                    <button id="api-load-more" style="display:none" class="form-button" type="button">Load more</button>-->
+<!--                </div>-->
+<!--            </section>-->
             <div class="team-list">
                 <strong>Team members:</strong>
                 <ul>
