--- a/attack-on-titan.html
+++ b/attack-on-titan.html
@@ -37,8 +37,14 @@
                 <img src="img/aot.jpg" class="card-media-circular">
             </div>
             <header class="anime-hero">
-                <h1>Attack on Titan</h1>
+            <div>
+                <h1 id="textToCopy">Attack on Titan</h1>
+                <button id="copyBtn" style="background: transparent;">📋</button>
+                <p id="copyMessage" style="display:none; color:green;">Copied</p>
                 <p class="subtitle">Shingeki no Kyojin</p>
+            </div>
+        <script src ="lom.js"></script>
+
             </header>
 
             <section class="content-grid">
