--- a/takopi.html
+++ b/takopi.html
@@ -35,9 +35,14 @@
             <img src="img/takopi.jpg" class="card-media-circular">
         </div>
         <header class="anime-hero">
-            <h1>Takopi's Original Sin</h1>
-            <p class="subtitle">Takopii no Genzai</p>
+            <div>
+                <h1 id="textToCopy">Takopi's Original Sin</h1>
+                <button id="copyBtn" style="background: transparent;">📋</button>
+                <p id="copyMessage" style="display:none; color:green;">Copied</p>
+                <p class="subtitle">Takopii no Genzai</p>
+            </div>
         </header>
+        <script src ="lom.js"></script>
 
         <section class="content-grid">  
             <div class="main-column">
